<resources>
    <string name="app_name">AppDev</string>

    <!-- SharedPreferences Keys -->
    <string name="SP_langPref_Key">langPref</string>
    <string name="SP_checkBoxSave_Key">checkBox</string>
    <string name="SP_login_Key">login</string>
    <string name="SP_passwd_Key">passwd</string>

    <!-- SharedPreferences Lang Values -->
    <string name="SP_langPref_frValue">fr</string>
    <string name="SP_langPref_deValue">de</string>
    <string name="SP_langPref_itaValue">ita</string>
    <string name="SP_langPref_enValue">en</string>

    <!-- SharedPreferences checkBox Values -->
    <string name="SP_checkBox_true">true</string>
    <string name="SP_checkBox_false">false</string>

    <!-- LOGIN STRINGS -->
    <string name="login_fr_passwd_reset">Mot de passe oublié ?</string>
    <string name="login_fr_inscription">S\'inscrire</string>
    <string name="login_fr_checkBox">Se rappeler de moi</string>

    <string name="login_en_inscription">Register</string>
    <string name="login_en_passwd_reset">Forgot password ?</string>
    <string name="login_en_checkBox">Remember me</string>

    <string name="login_ita_inscription">Iscriversi</string>
    <string name="login_ita_passwd_reset">Password dimenticata ?</string>
    <string name="login_ita_checkBox">Ricordare me</string>

    <string name="login_de_inscription">Zur Registrierung</string>
    <string name="login_de_passwd_reset">Passwort vergessen ?</string>
    <string name="login_de_checkBox">An mich erinnern</string>

    <!-- inscription STRINGS -->
    <string name="inscription_fr_str">Inscription</string>
    <string name="inscription_fr_passwd">Mot de passe</string>
    <string name="inscription_fr_passwd2">Retapez le mot de passe</string>
    <string name="inscription_fr_err_empty">Un ou plusieurs champs sont vides</string>
    <string name="inscription_fr_err_email">Email invalide</string>
    <string name="inscription_fr_err_passwd">Min 6 caractères pour le mot de passe</string>
    <string name="inscription_fr_err_passwd2">Les 2 mots de passes ne correspondent pas</string>
    <string name="inscription_fr_err_inscr">Email déjà utilisé</string>
    <string name="inscription_fr_err_inscr2">Erreur, contatez un administrateur</string>
    <string name="inscription_fr_inscrOk">Vous êtes maintenant inscrit</string>

    <string name="inscription_ita_str">Registrazione</string>
    <string name="inscription_ita_passwd">Password</string>
    <string name="inscription_ita_passwd2">Ripeti la password di nuovo</string>
    <string name="inscription_ita_err_empty">L\'indirizzo email e password sono obbligatori</string>
    <string name="inscription_ita_err_email">L\'indirizzo email non è valido</string>
    <string name="inscription_ita_err_passwd">Min. 6 caratteri per la password</string>
    <string name="inscription_ita_err_passwd2">Le due password devono essere uguali</string>
    <string name="inscription_ita_err_inscr">L\'e-mail è già utilizzata</string>
    <string name="inscription_ita_err_inscr2">Errore, contattare un amministratore</string>
    <string name="inscription_ita_inscrOk">Sei ora registrato</string>

    <string name="inscription_en_str">Register</string>
    <string name="inscription_en_passwd">Password</string>
    <string name="inscription_en_passwd2">Type the password again</string>
    <string name="inscription_en_err_empty">You have to enter an email address and password</string>
    <string name="inscription_en_err_email">The email address isn\'t valid</string>
    <string name="inscription_en_err_passwd">Min. 6 characters needed for the password</string>
    <string name="inscription_en_err_passwd2">The passwords are different</string>
    <string name="inscription_en_err_inscr">E-mail already used</string>
    <string name="inscription_en_err_inscr2">Error, please contact an admin.</string>
    <string name="inscription_en_inscrOk">You are successfully registered</string>

    <string name="inscription_de_str">Inschrift</string>
    <string name="inscription_de_passwd">Password</string>
    <string name="inscription_de_passwd2">Geben Sie das Passwort erneut ein</string>
    <string name="inscription_de_err_empty">Du musst eine E-Mail-Adresse und Password eingeben.</string>
    <string name="inscription_de_err_email">Die E-Mail-Adresse ist nicht gültig</string>
    <string name="inscription_de_err_passwd">Min. 6 Zeichen für das Passwort erforderlich</string>
    <string name="inscription_de_err_passwd2">Die Passwörter sind unterschiedlich.</string>
    <string name="inscription_de_err_inscr">E-Mail bereits verwendet</string>
    <string name="inscription_de_err_inscr2">Fehler, bitte kontaktieren Sie einen Admin.</string>
    <string name="inscription_de_inscrOk">Du bist erfolgreich registriert</string>


    <!-- password reset Strings -->
    <string name="passwdReset_fr_email">Votre email</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pseudo User</string>
    <string name="nav_header_subtitle">petit.cochon@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- Details page text -->
    <string name="detailsp_fr_str">Détails</string>
    <string name="detailsp_fr_services">Services</string>
    <string name="detailsp_fr_langues">Langues Parlées</string>
    <string name="detailsp_fr_tarif">Tarif</string>
    <string name="detailsp_fr_book">Réserver</string>

    <string name="detailsp_en_str">Details</string>
    <string name="detailsp_en_services">Services</string>
    <string name="detailsp_en_langues">Language</string>
    <string name="detailsp_en_tarif">Hourly rate</string>
    <string name="detailsp_en_book">Book now</string>

    <string name="detailsp_ita_str">Dettagli</string>
    <string name="detailsp_ita_services">Servizi</string>
    <string name="detailsp_ita_langues">Lingue</string>
    <string name="detailsp_ita_tarif">Tariffa oraria</string>
    <string name="detailsp_ita_book">Prenotare</string>

    <string name="detailsp_de_str">Details</string>
    <string name="detailsp_de_services">Dienstleistungen</string>
    <string name="detailsp_de_langues">Sprache</string>
    <string name="detailsp_de_tarif">Stundensatz</string>
    <string name="detailsp_de_book">Buch</string>


    <!-- Inscription choix text -->
    <string name="inscr_choix_fr_texte">Vous êtes...</string>
    <string name="inscr_choix_fr_homme">Un homme</string>
    <string name="inscr_choix_fr_escort">Une indépendante</string>
    <string name="inscr_choix_fr_salon">Un salon</string>

    <string name="inscr_choix_ita_texte">Tipo di registrazione</string>
    <string name="inscr_choix_ita_homme">Sono un uomo</string>
    <string name="inscr_choix_ita_escort">Sono un\'indipendente</string>
    <string name="inscr_choix_ita_salon">Sono un salone</string>

    <string name="inscr_choix_en_texte">You are...</string>
    <string name="inscr_choix_en_homme">A man</string>
    <string name="inscr_choix_en_escort">An independent worker</string>
    <string name="inscr_choix_en_salon">An erotic lounge</string>

    <string name="inscr_choix_de_texte">Sie sind...</string>
    <string name="inscr_choix_de_homme">Ein Mann</string>
    <string name="inscr_choix_de_escort">Ein unabhängiger</string>
    <string name="inscr_choix_de_salon">Ein erotischer Salon</string>



    <!-- Inscription escort -->
    <string name="inscr_esc_fr_pseudo">Pseudo</string>
    <string name="inscr_esc_fr_suivant">Suivant</string>
    <string name="inscr_esc_pb_fr_info">Informations</string>
    <string name="inscr_esc_pb_fr_contact">Contact</string>
    <string name="inscr_esc_pb_fr_photos">Photos</string>

    <string name="inscr_esc_ita_pseudo">Username</string>
    <string name="inscr_esc_ita_suivant">Prossimo</string>
    <string name="inscr_esc_pb_ita_info">Informazioni</string>
    <string name="inscr_esc_pb_ita_contact">Contatto</string>
    <string name="inscr_esc_pb_ita_photos">Fotos</string>

    <string name="inscr_esc_de_pseudo">Username</string>
    <string name="inscr_esc_de_suivant">Nach</string>
    <string name="inscr_esc_pb_de_info">Informationen</string>
    <string name="inscr_esc_pb_de_contact">Kontakt</string>
    <string name="inscr_esc_pb_de_photos">Fotos</string>

    <string name="inscr_esc_en_pseudo">Username</string>
    <string name="inscr_esc_en_suivant">Next</string>
    <string name="inscr_esc_pb_en_info">Information</string>
    <string name="inscr_esc_pb_en_contact">Contact</string>
    <string name="inscr_esc_pb_en_photos">Pictures</string>




</resources>
