<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EscortInscriptionActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/inscr_esc_emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="E-Mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/inscr_esc_pseudoInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscr_esc_progressLogin" />

    <EditText
        android:id="@+id/inscr_esc_pseudoInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inscr_esc_fr_pseudo"
        android:inputType="text|textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/inscr_esc_passwdInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscr_esc_emailInput" />

    <EditText
        android:id="@+id/inscr_esc_passwdInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inscription_fr_passwd"
        android:inputType="textEmailAddress|textPassword"
        app:layout_constraintBottom_toTopOf="@+id/inscr_esc_passwdInput2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscr_esc_pseudoInput" />

    <EditText
        android:id="@+id/inscr_esc_passwdInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inscription_fr_passwd2"
        android:inputType="textEmailAddress|textPassword"
        app:layout_constraintBottom_toTopOf="@+id/inscr_esc_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscr_esc_passwdInput" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="352dp"
        android:layout_height="32dp"
        android:max="100"
        android:progress="20"
        app:layout_constraintBottom_toTopOf="@+id/inscr_esc_progressLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inscr_esc_progressLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        app:layout_constraintBottom_toTopOf="@+id/inscr_esc_emailInput"
        app:layout_constraintEnd_toStartOf="@+id/inscr_esc_progressInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/inscr_esc_progressInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Informations"
        app:layout_constraintBottom_toTopOf="@+id/inscr_esc_emailInput"
        app:layout_constraintEnd_toStartOf="@+id/inscr_esc_progressContact"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inscr_esc_progressLogin"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.456" />

    <TextView
        android:id="@+id/inscr_esc_progressContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact"
        app:layout_constraintBottom_toTopOf="@+id/inscr_esc_emailInput"
        app:layout_constraintEnd_toStartOf="@+id/inscr_esc_progressPhotos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inscr_esc_progressInfo"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.456" />

    <TextView
        android:id="@+id/inscr_esc_progressPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Photos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inscr_esc_progressContact"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/inscr_esc_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscr_esc_fr_suivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscr_esc_passwdInput2" />


</android.support.constraint.ConstraintLayout>